maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:7: error: not found: value entier
if (entier=0)
    ^RandomMouseMaze:11: error: type mismatch;
 found   : Unit
 required: Boolean
if (nombre=1)
          ^