maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run() {
var nombre:Int = 0 
while(!estSurBiscuit)
{
nombre=random3() ;
if (entier=0)
{
avance();
}
if (nombre=1)
{
	droite();
}
else 
{
 gauche();	
}

}

}
